Inserção de um produto e roteamento para a pagina para começar a funcionalidade

--- a/ProjetoCesae/src/components/Header/header.css
+++ b/ProjetoCesae/src/components/Header/header.css
@@ -14,7 +14,7 @@
   }
   
   .Menu {
-    font-family: Caviar Dreams;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 14px;
     text-transform: uppercase;
     font-weight: bold;
