--- a/ProjetoCesae/src/components/sobre/sobre.css
+++ b/ProjetoCesae/src/components/sobre/sobre.css
@@ -34,15 +34,8 @@
     line-height: 1.6;
 }
 
-.reservation-button {
+.reserva{
     margin-top: 50px;
-    background-color: #ff7f00;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1.2em;
 }
 
 @media screen and (max-width: 768px) {
